--- a/Metrics/template.ipynb
+++ b/Metrics/template.ipynb
@@ -12,7 +12,7 @@
    "source": [
     "# This is the parameters cell\n",
     "# projection_paths = './Output/quickdraw-pca_s4.csv'\n",
-    "# projection_paths = './Output/gaussians-pca_s4.csv ./Output/gaussians-AE_10f_2f_20ep.csv ./Output/gaussians-dtsne_70p_0-1l.csv'\n",
+    "# projection_paths = './Output/gaussians-pca_s4.csv ./Output/gaussians-AE_10f_2f_20ep.csv'\n",
     "projection_paths = ''"
    ]
   },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,9 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "metric_ids = ['stab_pearson', 'stab_spearman', 'stab_kendall', 'stab_kl', 'stab_stress_n', 'stab_stress_s',\n",
@@ -252,9 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
@@ -282,16 +278,16 @@
     "                                      algorithm='kd_tree').fit(vs_m[t]).kneighbors(vs_m[t])\n",
     "        \n",
     "        # Save distances to compute correlation/stress metrics\n",
-    "        dists_nd = np.delete(dists_nd, 0)\n",
+    "#         dists_nd = np.delete(dists_nd, 0)\n",
     "        dists_nd_all.append(dists_nd)\n",
-    "        dists_md = np.delete(dists_md, 0)\n",
+    "#         dists_md = np.delete(dists_md, 0)\n",
     "        dists_md_all.append(dists_md)\n",
     "        \n",
     "        # Check classes of neighbors for neighbor hit metric\n",
     "        for i in range(len(indexes)):\n",
     "            i_class = index_to_class[i]\n",
     "            k_max = int(max(K_VALUES) * len(indexes))\n",
-    "            ngbr_classes = index_to_class[nbrs_nd[i, :k_max]]\n",
+    "            ngbr_classes = index_to_class[nbrs_md[i, :k_max]]\n",
     "            for k_index, k_percentage in enumerate(K_VALUES):\n",
     "                k = int(k_percentage * len(indexes))\n",
     "                ngbr_classes = ngbr_classes[:k]\n",
@@ -337,6 +333,15 @@
     "    metric_results.loc[p]['spat_spearman'] = scipy.stats.spearmanr(dists_nd_all, dists_md_all)[0]\n",
     "    metric_results.loc[p]['spat_kendall']  = scipy.stats.kendalltau(dists_nd_all, dists_md_all)[0]\n",
     "    metric_results.loc[p]['spat_kl']       = scipy.stats.entropy(dists_nd_all, dists_md_all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "projection_paths"
    ]
   },
   {
