--- a/Plots/trails.ipynb
+++ b/Plots/trails.ipynb
@@ -12,11 +12,10 @@
     "import numpy as np\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "import imageio\n",
     "import os\n",
-    "from tqdm import tqdm_notebook \n",
+    "from tqdm import tqdm\n",
     "from glob import glob\n",
-    "os.chdir('..')"
+    "# os.chdir('..')"
    ]
   },
   {
@@ -175,9 +174,7 @@
     "size_trail = 5\n",
     "n_proj = len(projection_paths)\n",
     "\n",
-    "n_extended = 5\n",
-    "\n",
-    "for t in tqdm_notebook(range(n_extended)):\n",
+    "for t in tqdm(range(n_extended)):\n",
     "    if n_proj < 4:\n",
     "        fig, axes = plt.subplots(ncols=n_proj, nrows=1,figsize=(n_proj*5,5))\n",
     "    else:\n",
