--- a/Plots/trails.ipynb
+++ b/Plots/trails.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,12 @@
     "import os\n",
     "from tqdm import tqdm\n",
     "from glob import glob\n",
-    "# os.chdir('..')"
+    "os.chdir('..')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "parameters"
@@ -33,17 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "dataset_id = 'quickdraw'\n",
     "projection_paths = pd.read_csv('Metrics/Results/{}.csv'.format(dataset_id), index_col=0).index\n",
     "names = projection_paths.str.extract(r'.*/{}-(.*).csv'.format(dataset_id), expand=False) # Clean string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -70,16 +71,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mkdir: cannot create directory ‘Plots/Anim/quickdraw’: File exists\r\n"
+     ]
+    }
+   ],
    "source": [
     "!mkdir {'Plots/Anim/'+dataset_id}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,31 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3edb3e7e2034dcdbfb75fc6dd1d0067",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=5), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "anim_dir = 'Plots/Anim/{}'.format(dataset_id)\n",
     "# Draw figures\n",
@@ -220,24 +207,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = n_extended-1\n",
-    "!convert -delay 5 -loop 0 {anim_dir}/proj-%d.png[0-{n}] {anim_dir}/{dataset_id}-gif.gif"
+    "# Generate gif - usually large\n",
+    "# n = n_extended-1\n",
+    "# !convert -delay 5 -loop 0 {anim_dir}/proj-%d.png[0-{n}] {anim_dir}/{dataset_id}-gif.gif"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/eduardo/PhD/Projections/dynamic-projections/Plots/Anim/quickdraw\r\n"
+     "ename": "NameError",
+     "evalue": "name 'anim_dir' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-85980129c1ee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0manim_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' pwd'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'anim_dir' is not defined"
      ]
     }
    ],
@@ -248,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,77 +249,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate video\n",
+    "! ls | grep .*.png | sort -V > order.txt\n",
+    "! mencoder mf://@order.txt -mf fps=10:type=png -ovc x264 -x264encopts bitrate=1200:threads=2 -o {dataset_id}-avi.avi\n",
+    "! rm order.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MEncoder 1.2.1 (Debian), built with gcc-5.4.0 (C) 2000-2016 MPlayer Team\n",
-      "\n",
-      "WARNING: OUTPUT FILE FORMAT IS _AVI_. See -of help.\n",
-      "success: format: 16  data: 0x0 - 0x0\n",
-      "MF file format detected.\n",
-      "[mf] number of files: 5\n",
-      "VIDEO:  [MPNG]  0x0  24bpp  10.000 fps    0.0 kbps ( 0.0 kbyte/s)\n",
-      "[V] filefmt:16  fourcc:0x474E504D  size:0x0  fps:10.000  ftime:=0.1000\n",
-      "Opening video filter: [expand osd=1]\n",
-      "Expand: -1 x -1, -1 ; -1, osd: 1, aspect: 0.000000, round: 1\n",
-      "==========================================================================\n",
-      "Opening video decoder: [ffmpeg] FFmpeg's libavcodec codec family\n",
-      "libavcodec version 56.60.100 (external)\n",
-      "Selected video codec: [ffpng] vfm: ffmpeg (FFmpeg PNG)\n",
-      "==========================================================================\n",
-      "Could not find matching colorspace - retrying with -vf scale...\n",
-      "Opening video filter: [scale]\n",
-      "Movie-Aspect is undefined - no prescaling applied.\n",
-      "[swscaler @ 0x7f32c72a3fa0]bicubic scaler, from rgba to yuv420p using MMXEXT\n",
-      "x264 [info]: using SAR=1/1\n",
-      "x264 [info]: using cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 AVX2 LZCNT BMI2\n",
-      "x264 [info]: profile High, level 3.2\n",
-      "Movie-Aspect is 2.01:1 - prescaling to correct movie aspect.\n",
-      "[swscaler @ 0x7f32c72a3fa0]Warning: data is not aligned! This can lead to a speedloss\n",
-      "Pos:   0.5s      5f (100%)  0.00fps Trem:   0min   0mb  A-V:0.000 [0:0]\n",
-      "\n",
-      "Skipping frame!\n",
-      "Pos:   0.5s      6f (100%)  0.00fps Trem:   0min   0mb  A-V:0.000 [0:0]\n",
-      "\n",
-      "Flushing video frames.\n",
-      "Writing header...\n",
-      "ODML: vprp aspect is 16384:8130.\n",
-      "Writing header...\n",
-      "ODML: vprp aspect is 16384:8130.\n",
-      "Writing index...\n",
-      "Writing header...\n",
-      "ODML: vprp aspect is 16384:8130.\n",
-      "\n",
-      "Video stream: 1420.896 kbit/s  (177612 B/s)  size: 88806 bytes  0.500 secs  6 frames\n",
-      "x264 [info]: frame I:1     Avg QP:15.24  size: 33216\n",
-      "x264 [info]: frame P:1     Avg QP:26.26  size: 17616\n",
-      "x264 [info]: frame B:3     Avg QP:23.88  size: 12658\n",
-      "x264 [info]: consecutive B-frames: 20.0%  0.0%  0.0% 80.0%\n",
-      "x264 [info]: mb I  I16..4: 50.0% 39.8% 10.2%\n",
-      "x264 [info]: mb P  I16..4:  0.5%  0.7%  2.1%  P16..4:  2.2%  1.6%  1.1%  0.0%  0.0%    skip:91.8%\n",
-      "x264 [info]: mb B  I16..4:  0.5%  0.1%  0.3%  B16..8:  2.7%  2.0%  1.7%  direct: 0.8%  skip:91.9%  L0:39.7% L1:29.1% BI:31.1%\n",
-      "x264 [info]: final ratefactor: 22.08\n",
-      "x264 [info]: 8x8 transform intra:38.5% inter:5.0%\n",
-      "x264 [info]: coded y,uvDC,uvAC intra: 8.8% 8.1% 7.7% inter: 2.9% 1.7% 1.4%\n",
-      "x264 [info]: i16 v,h,dc,p: 88% 12%  0%  0%\n",
-      "x264 [info]: i8 v,h,dc,ddl,ddr,vr,hd,vl,hu: 36% 35% 28%  0%  0%  0%  0%  0%  0%\n",
-      "x264 [info]: i4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 28% 22% 23%  4%  5%  5%  5%  4%  5%\n",
-      "x264 [info]: i8c dc,h,v,p: 95%  2%  2%  0%\n",
-      "x264 [info]: Weighted P-Frames: Y:0.0% UV:0.0%\n",
-      "x264 [info]: ref B L0: 91.3%  8.7%\n",
-      "x264 [info]: ref B L1: 97.2%  2.8%\n",
-      "x264 [info]: kb/s:1420.90\n"
+     "ename": "NameError",
+     "evalue": "name 'anim_dir' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-c155675b1e79>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_extended\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mn_nans\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'{}/proj-{}.png'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0manim_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'rm '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' rm {r}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'anim_dir' is not defined"
      ]
     }
    ],
    "source": [
-    "! ls | grep .*.png | sort -V > order.txt\n",
-    "! mencoder mf://@order.txt -mf fps=10:type=png -ovc x264 -x264encopts bitrate=1200:threads=2 -o {dataset_id}-mkv.mkv\n",
-    "! rm order.txt"
+    "for i in range(n_extended):\n",
+    "    if i % (n_nans+1) != 0:\n",
+    "        r = '{}/proj-{}.png'.format(anim_dir, i) \n",
+    "        print('rm ' + r)\n",
+    "        ! rm {r}"
    ]
   }
  ],
