--- a/Plots/trails.ipynb
+++ b/Plots/trails.ipynb
@@ -231,7 +231,7 @@
    "source": [
     "for i in range(n_extended):\n",
     "    if i % (n_nans+1) != 0:\n",
-    "        r = '{}/proj-{}.png'.format(anim_dir, i) \n",
+    "        r = 'proj-{}.png'.format(anim_dir, i) \n",
     "        print('rm ' + r)\n",
     "        ! rm {r}"
    ]
