added images of histograms of every attribute of the datasets. Still missing the histograms of the nnset ds. Next: variance heatmaps; pooled variance (if applicable);

--- a/Stats/esc50_stats.ipynb
+++ b/Stats/esc50_stats.ipynb
@@ -6,14 +6,12 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'/home/ipsilva/Repositories/dynamic-projections/Datasets/'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/ipsilva/Repositories/dynamic-projections/Datasets/\n",
+      "/home/ipsilva/Repositories/dynamic-projections/Stats/Results/\n"
+     ]
     }
    ],
    "source": [
@@ -21,7 +19,9 @@
     "\n",
     "curr_folder = os.getcwd() + \"/\"\n",
     "datasets_folder = curr_folder[:-6] + \"Datasets/\"\n",
-    "datasets_folder"
+    "stats_results_folder = curr_folder + \"Results/\"\n",
+    "print(datasets_folder)\n",
+    "print(stats_results_folder)"
    ]
   },
   {
@@ -221,6 +221,29 @@
     "print(\"Total dimensions:\", df.shape[1])\n",
     "print(\"Intrinsic dimensions:\", dims)\n",
     "print(\"Total variance:\", final_var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# identifying distributions\n",
+    "hists_ax = df.hist(bins=20, grid=False, figsize=(10,10), density=True)\n",
+    "\n",
+    "for arr in hists_ax:\n",
+    "    for ax in arr:\n",
+    "        ax.set_yticklabels([])\n",
+    "        ax.set_xticklabels([])\n",
+    "        \n",
+    "fig_name = selected_dataset.split('/')[-1]\n",
+    "plt.suptitle(fig_name + \" probability distributions\", fontsize=15, weight='roman')\n",
+    "plt.tight_layout()\n",
+    "plt.subplots_adjust(top=0.925)\n",
+    "plt.savefig(stats_results_folder+\"attribute_histograms/\"+fig_name+\"_prob_dist\")"
    ]
   },
   {
