--- a/Stats/nnset_stats.ipynb
+++ b/Stats/nnset_stats.ipynb
@@ -2,53 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/ipsilva/Repositories/dynamic-projections/Datasets/'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
     "curr_folder = os.getcwd() + \"/\"\n",
     "datasets_folder = curr_folder[:-6] + \"Datasets/\"\n",
-    "datasets_folder"
+    "stats_results_folder = curr_folder + \"Results/\"\n",
+    "print(datasets_folder)\n",
+    "print(stats_results_folder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/home/ipsilva/Repositories/dynamic-projections/Datasets/gaussians',\n",
-       " '/home/ipsilva/Repositories/dynamic-projections/Datasets/quickdraw',\n",
-       " '/home/ipsilva/Repositories/dynamic-projections/Datasets/sorts',\n",
-       " '/home/ipsilva/Repositories/dynamic-projections/Datasets/walk',\n",
-       " '/home/ipsilva/Repositories/dynamic-projections/Datasets/nnset',\n",
-       " '/home/ipsilva/Repositories/dynamic-projections/Datasets/fashion',\n",
-       " '/home/ipsilva/Repositories/dynamic-projections/Datasets/cifar10cnn',\n",
-       " '/home/ipsilva/Repositories/dynamic-projections/Datasets/esc50',\n",
-       " '/home/ipsilva/Repositories/dynamic-projections/Datasets/qtables',\n",
-       " '/home/ipsilva/Repositories/dynamic-projections/Datasets/cartolastd']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "datasets_subfolders = []\n",
     "for i in os.walk(datasets_folder):\n",
@@ -60,20 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/ipsilva/Repositories/dynamic-projections/Datasets/nnset'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset_number = 4\n",
     "selected_dataset = datasets_subfolders[dataset_number]\n",
@@ -82,20 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['nnset-0.csv', 'nnset-10.csv', 'nnset-25.csv', 'nnset-3.csv', 'nnset-27.csv']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from os import listdir\n",
     "from os.path import isfile, join\n",
@@ -106,38 +55,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2400, 8070)        0         1         2         3         4         5         6     \\\n",
-      "0  0.322770  0.279649  0.335847  0.424952  0.490591  0.506529  0.524146   \n",
-      "1  0.358230  0.390066  0.447455  0.507796  0.556292  0.554613  0.557266   \n",
-      "2  0.392771  0.216740  0.303905  0.416151  0.486390  0.503915  0.521783   \n",
-      "3  0.512320  0.407074  0.379818  0.449019  0.506695  0.518385  0.534443   \n",
-      "4  0.665977  0.540487  0.528186  0.593423  0.641495  0.640467  0.645731   \n",
-      "\n",
-      "       7         8         9     ...      8060      8061      8062      8063  \\\n",
-      "0  0.549136  0.542073  0.551281  ...  0.437468  0.430445  0.431587  0.434024   \n",
-      "1  0.566607  0.548507  0.546772  ...  0.373889  0.358949  0.357158  0.353526   \n",
-      "2  0.544098  0.537360  0.544763  ...  0.396023  0.385041  0.386434  0.386826   \n",
-      "3  0.555051  0.546087  0.552993  ...  0.376948  0.365778  0.368775  0.370560   \n",
-      "4  0.656747  0.635437  0.629814  ...  0.328294  0.315302  0.317730  0.314419   \n",
-      "\n",
-      "       8064      8065      8066      8067      8068      8069  \n",
-      "0  0.442519  0.447683  0.455870  0.463402  0.467308  0.465432  \n",
-      "1  0.357921  0.358835  0.364622  0.372693  0.377635  0.377275  \n",
-      "2  0.394324  0.399154  0.408152  0.416377  0.420327  0.419728  \n",
-      "3  0.379890  0.384375  0.393114  0.401555  0.404521  0.403747  \n",
-      "4  0.322616  0.326564  0.332326  0.337833  0.339173  0.339967  \n",
-      "\n",
-      "[5 rows x 8070 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from itertools import product\n",
@@ -163,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,22 +108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total time-steps: 30\n",
-      "Registers per time-step (median): 80.0\n",
-      "Registers per time-step (deviation): 0.0\n",
-      "Total dimensions: 8070\n",
-      "Intrinsic dimensions: 178\n",
-      "Total variance: 0.9004695907106401\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "target_variance = 0.9\n",
     "\n",
@@ -215,6 +122,29 @@
     "print(\"Total dimensions:\", df.shape[1])\n",
     "print(\"Intrinsic dimensions:\", dims)\n",
     "print(\"Total variance:\", final_var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# identifying distributions\n",
+    "hists_ax = df.hist(bins=20, grid=False, figsize=(40,40), density=True)\n",
+    "\n",
+    "for arr in hists_ax:\n",
+    "    for ax in arr:\n",
+    "        ax.set_yticklabels([])\n",
+    "        ax.set_xticklabels([])\n",
+    "        \n",
+    "fig_name = selected_dataset.split('/')[-1]\n",
+    "plt.suptitle(fig_name + \" probability distributions\", fontsize=15, weight='roman')\n",
+    "plt.tight_layout()\n",
+    "plt.subplots_adjust(top=0.95)\n",
+    "plt.savefig(stats_results_folder+\"attribute_histograms/\"+fig_name+\"_prob_dist\")"
    ]
   },
   {
