--- a/Stats/qtables_stats.ipynb
+++ b/Stats/qtables_stats.ipynb
@@ -2,18 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'/home/ipsilva/Repositories/dynamic-projections/Datasets/'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/ipsilva/Repositories/dynamic-projections/Datasets/\n",
+      "/home/ipsilva/Repositories/dynamic-projections/Stats/Results/\n"
+     ]
     }
    ],
    "source": [
@@ -21,12 +19,14 @@
     "\n",
     "curr_folder = os.getcwd() + \"/\"\n",
     "datasets_folder = curr_folder[:-6] + \"Datasets/\"\n",
-    "datasets_folder"
+    "stats_results_folder = curr_folder + \"Results/\"\n",
+    "print(datasets_folder)\n",
+    "print(stats_results_folder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        " '/home/ipsilva/Repositories/dynamic-projections/Datasets/cartolastd']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "'/home/ipsilva/Repositories/dynamic-projections/Datasets/qtables'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        " 'qtables-15.csv']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -221,6 +221,29 @@
     "print(\"Total dimensions:\", df.shape[1])\n",
     "print(\"Intrinsic dimensions:\", dims)\n",
     "print(\"Total variance:\", final_var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# identifying distributions\n",
+    "hists_ax = df.hist(bins=20, grid=False, figsize=(40,40), density=True)\n",
+    "\n",
+    "for arr in hists_ax:\n",
+    "    for ax in arr:\n",
+    "        ax.set_yticklabels([])\n",
+    "        ax.set_xticklabels([])\n",
+    "        \n",
+    "fig_name = selected_dataset.split('/')[-1]\n",
+    "plt.suptitle(fig_name + \" probability distributions\", fontsize=15, weight='roman')\n",
+    "plt.tight_layout()\n",
+    "plt.subplots_adjust(top=0.95)\n",
+    "plt.savefig(stats_results_folder+\"attribute_histograms/\"+fig_name+\"_prob_dist\")"
    ]
   },
   {
